# ccl_mozilla_reader

./: .gitignore  LICENSE  README.md  ccl_moz_cache.py  ccl_moz_indexeddb.py  ccl_moz_indexeddb_key.py  ccl_moz_localstorage.py  ccl_moz_places.py  ccl_moz_sessionstorage.py  ccl_moz_structured_clone_reader.py  moz_lz4.py  pyproject.toml  requirements.txt  storage_common.py
ccl_mozilla_reader/: __init__.py  ccl_moz_cache.py  ccl_moz_indexeddb.py  ccl_moz_localstorage.py  ccl_moz_places.py  ccl_moz_profile_folder.py  ccl_moz_sessionstorage.py  common.py
ccl_mozilla_reader/storage_formats/: moz_lz4.py
